--- a/Esports/Framework/Framework.csproj
+++ b/Esports/Framework/Framework.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Selenium.WebDriver" Version="3.14.0" />
+    <PackageReference Include="Selenium.Support" Version="3.14.0" />
+  </ItemGroup>
 </Project>
