added player.json and other folders and files to work with data via json

--- a/Esports/Framework/Framework.csproj
+++ b/Esports/Framework/Framework.csproj
@@ -7,5 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Selenium.WebDriver" Version="3.14.0" />
     <PackageReference Include="Selenium.Support" Version="3.14.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Database\" />
+    <Folder Include="Model\" />
+    <Folder Include="Interface\" />
   </ItemGroup>
 </Project>
