added PlayerStats with JSON data to mimic local db

--- a/Esports/Tests/Tests.csproj
+++ b/Esports/Tests/Tests.csproj
@@ -15,8 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Base\" />
+    <Folder Include="_drivers_win\" />
     <Folder Include="Settings\" />
-    <Folder Include="_drivers\" />
+    <Folder Include="_drivers_mac\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj" />
