added Pages.PlayerStatsPage - Driver and SchedulePage cleanup

--- a/Esports/Framework/Framework.csproj
+++ b/Esports/Framework/Framework.csproj
@@ -12,5 +12,6 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Model\" />
+    <Folder Include="Settings\" />
   </ItemGroup>
 </Project>
