--- a/Esports/Tests/Tests.csproj
+++ b/Esports/Tests/Tests.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.2.1" />
     <PackageReference Include="Selenium.WebDriver" Version="3.14.0" />
     <PackageReference Include="Selenium.Support" Version="3.14.0" />
+    <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Include="NUnit.Console" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
