--- a/Esports/League.Com/League.Com.csproj
+++ b/Esports/League.Com/League.Com.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\" />
+    <Folder Include="Pages\Base\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj" />
