--- a/Esports/Tests/Tests.csproj
+++ b/Esports/Tests/Tests.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj" />
     <ProjectReference Include="..\League.Com\League.Com.csproj" />
+    <ProjectReference Include="..\Merchandising\Merchandising.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="ApiCheck.cs" />
