update League.Com since Riot completely changed website for 2019

--- a/Esports/Framework/Framework.csproj
+++ b/Esports/Framework/Framework.csproj
@@ -14,5 +14,6 @@
     <Folder Include="Model\" />
     <Folder Include="Selenium\" />
     <Folder Include="Settings\" />
+    <Folder Include="Constants\" />
   </ItemGroup>
 </Project>
