--- a/Esports/Tests/Tests.csproj
+++ b/Esports/Tests/Tests.csproj
@@ -19,7 +19,6 @@
 
   <ItemGroup>
     <Folder Include="Base\" />
-    <Folder Include="Settings\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj" />
@@ -28,5 +27,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="ApiCheck.cs" />
+    <Compile Remove="LoLEsportsTests.cs" />
   </ItemGroup>
 </Project>
