--- a/Esports/docker-compose.yml
+++ b/Esports/docker-compose.yml
@@ -6,19 +6,20 @@ services:
     ports:
       - "4444:4444"
     environment:
-        GRID_MAX_SESSION: 16
-        GRID_BROWSER_TIMEOUT: 300
-        GRID_TIMEOUT: 300
+      GRID_MAX_SESSION: 16
+      GRID_BROWSER_TIMEOUT: 300
+      GRID_TIMEOUT: 300
 
   chrome:
     image: selenium/node-chrome
     depends_on:
       - selenium-hub
     environment:
-      HUB_PORT_4444_TCP_ADDR: selenium-hub
-      HUB_PORT_4444_TCP_PORT: 4444
-      NODE_MAX_SESSION: 2
-      NODE_MAX_INSTANCES: 2
+      SE_EVENT_BUS_HOST: selenium-hub
+      SE_EVENT_BUS_PUBLISH_PORT: 4442
+      SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
+      SE_NODE_MAX_SESSIONS: 2
+      SE_NODE_MAX_INSTANCES: 2
     # volumes:
     #   - /dev/shm:/dev/shm
 
@@ -27,7 +28,8 @@ services:
     depends_on:
       - selenium-hub
     environment:
-      HUB_PORT_4444_TCP_ADDR: selenium-hub
-      HUB_PORT_4444_TCP_PORT: 4444
-      NODE_MAX_SESSION: 4
-      NODE_MAX_INSTANCES: 4
+      SE_EVENT_BUS_HOST: selenium-hub
+      SE_EVENT_BUS_PUBLISH_PORT: 4442
+      SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
+      SE_NODE_MAX_SESSIONS: 4
+      SE_NODE_MAX_INSTANCES: 4
